# slack-some-things

./: .gitignore  Cargo.toml  README.md  ch_list_folder_test.json  manifest.yml
examples/: sqlite_init.rs
migrations/: 0_setup.sql
src/: channel_dist.rs  channel_list_folder.rs  command_event_handler.rs  commands.rs  create_channel.rs  dist_target_map.rs  main.rs  post_message.rs  process_message.rs  push_event_handler.rs  retrieve_messages.rs  send_message.rs  set_target_tags.rs  slack_sender.rs  utils.rs
src/commands/: create_channel.rs  help.rs  operate.rs  set_target_tags.rs
src/dist_target_map/: channel_dist.rs  channel_list_folder.rs  operate_folder.rs  reader_folder.rs  user_folders.rs
src/process_message/: sender_profile.rs
src/query/: create_table.rs  dist.rs  dist_target_map.rs  fetch_user_folder.rs  mod.rs  user_folder.rs  utils.rs
