[package]
name = "slack-some-things"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
dotenv = "0.15.0"
futures = "0.3.28"
http = "0.2.9"
regex = "1.8.1"
rsb_derive = "0.5.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
slack-morphism = { version = "1.8.0", features = ["hyper","axum"]}
thiserror = "1.0.38"
tokio = {version = "1.25.0", features = ["full"] }
tokio-stream = {version = "0.1.12",features = ["fs"]}
tokio-util = "0.7.7"
url = { version = "2.3.1", features = ["serde"] }
