[package]
name = "slack-some-things"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
dotenvy = "0.15.7"
futures = "0.3.28"
http = "0.2.9"
regex = "1.8.3"
rsb_derive = "0.5.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
slack-morphism = { version = "1.12.0", features = ["hyper","axum"]}
thiserror = "1.0.40"
tokio = {version = "1.28.2", features = ["full"] }
tokio-stream = {version = "0.1.14",features = ["fs"]}
tokio-util = "0.7.8"
url = { version = "2.3.1", features = ["serde"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "sqlite","macros","migrate"]}